@@ -67,7 +67,7 @@ export(power.law.fit, running.mean, igraph.sample)
 
 # foreign formats
 
-export(read.graph, write.graph)
+export(read.graph, write.graph, graph.graphdb)
 
 # layouts
 
